--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@ max-width: 100%;
 width: 100%;
 }
 
+@media (max-width: 768px) {
+.wrapper {
+padding-top: 60px;
+justify-content: flex-start;
+min-height: 100vh;
+}
+}
+
 @keyframes fadeIn {
 from { opacity: 0; transform: translateY(10px); }
 to   { opacity: 1; transform: translateY(0); }
@@ -80,6 +88,19 @@ width: 100%;
 padding: 0 4px;
 flex-wrap: wrap;
 gap: 8px;
+}
+
+@media (max-width: 768px) {
+header {
+position: fixed;
+top: 10px;
+left: 10px;
+right: 70px;
+z-index: 999;
+width: auto;
+padding: 0;
+flex-wrap: nowrap;
+}
 }
 
 .logo {
@@ -109,6 +130,13 @@ width: 100%;
 padding: 0 4px;
 flex-wrap: wrap;
 justify-content: center;
+}
+
+@media (max-width: 768px) {
+.hud {
+gap: 8px;
+padding: 0 10px;
+}
 }
 
 .hud-item {
@@ -150,6 +178,14 @@ touch-action: none;
 max-width: 100%;
 width: min(400px, 100vw - 20px);
 height: min(400px, 100vw - 20px);
+}
+
+@media (max-width: 768px) {
+.canvas-wrap {
+width: min(350px, 90vw);
+height: min(350px, 90vw);
+margin-top: 10px;
+}
 }
 
 .canvas-wrap::before,
@@ -283,6 +319,14 @@ justify-content: center;
 flex-wrap: wrap;
 }
 
+@media (max-width: 768px) {
+.controls {
+margin-top: 20px;
+margin-bottom: 40px;
+padding: 0 10px;
+}
+}
+
 .key {
 display: inline-block;
 border: 1px solid #1a3a2a;
@@ -297,6 +341,12 @@ align-items: center;
 gap: 10px;
 width: 100%;
 padding: 0 4px;
+}
+
+@media (max-width: 768px) {
+.speed-bar-wrap {
+padding: 0 10px;
+}
 }
 
 .speed-label { 
