--- a/www/index.html
+++ b/www/index.html
@@ -69,8 +69,8 @@ width: 100%;
 
 @media (max-width: 768px) {
 .wrapper {
-padding-top: 60px;
-padding-bottom: 200px;
+padding-top: 50px;
+padding-bottom: 210px;
 justify-content: flex-start;
 min-height: 100vh;
 }
@@ -138,8 +138,9 @@ justify-content: center;
 gap: 6px;
 padding: 0 10px;
 flex-wrap: nowrap;
-overflow-x: auto;
-justify-content: flex-start;
+overflow-x: visible;
+justify-content: space-between;
+margin-top: 5px;
 }
 }
 
@@ -151,8 +152,9 @@ min-width: 60px;
 
 @media (max-width: 768px) {
 .hud-item {
-min-width: 50px;
-flex-shrink: 0;
+min-width: auto;
+flex: 1;
+flex-shrink: 1;
 }
 }
 
@@ -202,9 +204,10 @@ height: min(400px, 100vw - 20px);
 .canvas-wrap {
 width: calc(100vw - 20px);
 height: calc(100vw - 20px);
-max-width: 450px;
-max-height: 450px;
-margin-top: 10px;
+max-width: 420px;
+max-height: 420px;
+margin-top: 5px;
+margin-bottom: 10px;
 }
 }
 
@@ -408,10 +411,9 @@ right: 20px;
 width: 50px;
 height: 50px;
 border-radius: 50%;
-background: rgba(0, 255, 136, 0.1);
+background: rgba(0, 255, 136, 0.15);
 border: 2px solid var(--neon-green);
 color: var(--neon-green);
-font-size: 24px;
 display: flex;
 align-items: center;
 justify-content: center;
@@ -423,7 +425,7 @@ backdrop-filter: blur(5px);
 }
 
 .pause-btn:hover {
-background: rgba(0, 255, 136, 0.2);
+background: rgba(0, 255, 136, 0.3);
 transform: scale(1.1);
 }
 
@@ -431,21 +433,60 @@ transform: scale(1.1);
 transform: scale(0.95);
 }
 
+.pause-btn span {
+display: flex;
+align-items: center;
+justify-content: center;
+font-size: 0;
+}
+
 .pause-btn.playing span::before {
-content: '⏸';
+content: '';
+width: 3px;
+height: 16px;
+background: var(--neon-green);
+box-shadow: var(--glow-green);
+margin-right: 4px;
+}
+
+.pause-btn.playing span::after {
+content: '';
+width: 3px;
+height: 16px;
+background: var(--neon-green);
+box-shadow: var(--glow-green);
 }
 
 .pause-btn.paused span::before {
-content: '▶';
+content: '';
+width: 0;
+height: 0;
+border-left: 12px solid var(--neon-green);
+border-top: 8px solid transparent;
+border-bottom: 8px solid transparent;
+filter: drop-shadow(0 0 4px var(--neon-green));
+margin-left: 3px;
 }
 
 @media (max-width: 768px) {
 .pause-btn {
 width: 45px;
 height: 45px;
-font-size: 20px;
 top: 10px;
 right: 10px;
+}
+
+.pause-btn.playing span::before,
+.pause-btn.playing span::after {
+height: 14px;
+width: 2.5px;
+margin-right: 3px;
+}
+
+.pause-btn.paused span::before {
+border-left: 10px solid var(--neon-green);
+border-top: 7px solid transparent;
+border-bottom: 7px solid transparent;
 }
 }
 
@@ -1013,10 +1054,8 @@ const pauseBtn = document.getElementById('pause-btn');
 if (this.state === 'running') {
 pauseBtn.style.display = 'flex';
 pauseBtn.className = 'pause-btn playing';
-pauseBtn.querySelector('span').textContent = '⏸';
 } else if (this.state === 'paused') {
 pauseBtn.className = 'pause-btn paused';
-pauseBtn.querySelector('span').textContent = '▶';
 } else {
 pauseBtn.style.display = 'none';
 }
