Replace power-up emojis with text labels: BOU for shield, INV for invisibility

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ color: #2a6a5a;
 
 @media (max-width: 768px) {
 .hud-label {
-font-size: 14px;
+font-size: 8px;
 letter-spacing: 1px;
 }
 }
@@ -576,11 +576,11 @@ transform: scale(1.2);
 <span class="hud-value" id="fruits">0</span>
 </div>
 <div class="hud-item" id="shield-indicator" style="display:none;">
-<span class="hud-label">🛡️</span>
+<span class="hud-label">BOU</span>
 <span class="hud-value" style="color: #b366ff;" id="shield-time">0</span>
 </div>
 <div class="hud-item" id="invisibility-indicator" style="display:none;">
-<span class="hud-label">👁️</span>
+<span class="hud-label">INV</span>
 <span class="hud-value" style="color: #ffaa00;" id="invisibility-time">0</span>
 </div>
 </div>
